remove comment issue

--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -202,7 +202,7 @@ html {
 
     
 </style>    
-    {% comment %} <style>
+   <style>
         /* Sidebar styling */
         #sidebar {
             height: 100vh;
