--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -168,6 +168,7 @@
         }
     </style>
 </head>
+
 <body>
 <header>
     <!-- Navbar -->
@@ -176,18 +177,18 @@
             <button class="navbar-toggler" id="sidebarToggle" type="button" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand ms-2" href="/">
-                <img src="{% static 'logo.png' %}" alt="Logo" style="height: 50px; max-width: 120px;">
+            <a class="navbar-brand ms-2" href="/" style="display: flex; justify-content: center; align-items: center;">
+                <img src="{% static 'logo.png' %}" alt="Logo" style="max-height: 60px; transform: scale(1.5);">
             </a>
+            
+            
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Home</a>
-                    </li>
+                 
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'frontend:patient_signup' %}">Patient</a>
                     </li>
@@ -195,17 +196,15 @@
                         <a class="nav-link" href="{% url 'frontend:practitioner_signup' %}">Practitioner</a>
                     </li>
                 </ul>
-                <form class="d-flex ms-3">
-                    <input class="form-control me-2" type="search" placeholder="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
+               
             </div>
         </div>
     </nav>
 </header>
 
+
 <!-- Sidebar -->
-<div id="sidebar">
+<div id="sidebar" class="mt-4">
     <h5 class="fw-bold my-4 text-center">Menu</h5>
     <a href="#" class="menu-item d-block text-dark text-decoration-none">
         <i class="fas fa-user-md me-2"></i> Medical Team
@@ -218,11 +217,9 @@
     </a>
 </div>
 
-<main class="container-fluid">
     {% block main_content %}
     <!-- Main content goes here -->
     {% endblock %}
-</main>
 
 <!-- JavaScript -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
