--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block main_content %}
 <!-- Medical Background Section -->
-<div class="container-fluid" style="background-color: #f4f9fd; padding-top: 60px;">
+<div class="container" style="background-color: #f4f9fd; padding-top: 60px;">
     <div class="col-md-9 col-lg-10 ms-auto" style="margin-left: 270px; padding-top: 20px;">
         <!-- Our Services Section -->
         <div class="container my-5">
