--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -201,14 +201,20 @@
                     {% get_patient_name request as patient_name %}
     
                     {% if practitioner_name %}
-                    <!-- Show Practitioner Name -->
+                    <!-- Show Practitioner Name and Logout -->
                     <li class="nav-item">
                         <span class="nav-link">Welcome, {{ practitioner_name }}</span>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'frontend:logout' %}">Logout</a>
+                    </li>
                     {% elif patient_name %}
-                    <!-- Show Patient Name -->
+                    <!-- Show Patient Name and Logout -->
                     <li class="nav-item">
                         <span class="nav-link">Welcome, {{ patient_name }}</span>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'frontend:logout' %}">Logout</a>
                     </li>
                     {% else %}
                     <!-- Patient Dropdown -->
