--- a/patientdashboard/templates/patientdashboard/base.html
+++ b/patientdashboard/templates/patientdashboard/base.html
@@ -18,9 +18,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
+    <!-- Add MDB CSS -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.3.0/mdb.min.css" rel="stylesheet">
+<!-- Add MDB JS -->
+
     
 
     {% block extra_css %}{% endblock %}
+
+
 
 </head>
 <style>
@@ -410,7 +417,6 @@ padding: 60px 0;
         </div>
     </div>
 
-    <!-- Scripts -->
     {% block extra_js %}{% endblock %}
 
     <script src="{% static 'assets/js/jquery-3.2.1.min.js' %}"></script>
@@ -419,10 +425,13 @@ padding: 60px 0;
     <script src="{% static 'assets/js/jquery.slimscroll.js' %}"></script>
     <script src="{% static 'assets/js/app.js' %}"></script>
     <script src="{% static 'assets/js/jquery-3.2.1.min.js' %}"></script>
-        <script src="{% static 'assets/js/popper.min.js' %}"></script>
-        <script src="{% static 'assets/js/bootstrap.min.js' %}"></script>
-        <script src="{% static 'assets/js/jquery.slimscroll.js' %}"></script>
-        <script src="{% static 'assets/js/app.js' %}"></script>
+    <script src="{% static 'assets/js/popper.min.js' %}"></script>
+    <script src="{% static 'assets/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'assets/js/jquery.slimscroll.js' %}"></script>
+    <script src="{% static 'assets/js/app.js' %}"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.3.0/mdb.min.js"></script>
+
 
 </body>
 
