--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -252,7 +252,8 @@
         <li><a class="dropdown-item" href="{% url 'patientdashboard:doctor_profile' %}">Practitioner Profiles and Reviews</a></li>
         <li><a class="dropdown-item" href="{% url 'patientdashboard:telemedicine' %}">Telemedicine Services</a></li>
         <li><a class="dropdown-item" href="{% url 'patientdashboard:chat' %}">Communication with Practitioners</a></li>
-        
+        <li><a class="dropdown-item" href="{% url 'patientdashboard:dashboard' %}">Patient Dashboard</a></li>
+
     </ul>
 </li>
 
