--- a/frontend/templates/appointment.html
+++ b/frontend/templates/appointment.html
@@ -1,7 +1,7 @@
-{% extends 'base.html' %}
+{% extends 'patientdashboard/base.html' %}
 {% load static %}
 
-{% block main_content %}
+{% block content %}
 <div class="container" style="margin-top: 100px;">
     <!-- Appointment Card 1 -->
     <div class="card mb-4 shadow-sm">
@@ -150,4 +150,4 @@
         </div>
     </div>
 </div>
-{% endblock main_content %}
+{% endblock content %}
