--- a/patientdashboard/templates/patientdashboard/booking_success.html
+++ b/patientdashboard/templates/patientdashboard/booking_success.html
@@ -1,4 +1,4 @@
-{% extends "patientdashboard/base.html" %}
+{% extends 'patientdashboard/patient_base.html' %}
 {% load static %}
 
 {% block title %}Appointment Booked{% endblock %}
