--- a/patientdashboard/templates/patientdashboard/base.html
+++ b/patientdashboard/templates/patientdashboard/base.html
@@ -252,7 +252,7 @@
     <!-- Header -->
     <div class="header">
         <div class="header-left">
-            <a href="index.html" class="logo">
+            <a href="/" class="logo">
                 <img src="{% static 'logo.png' %}" width="35" height="35" alt="Preclinic">
             </a>
         </div>
