--- a/frontend/templates/PatientLogin.html
+++ b/frontend/templates/PatientLogin.html
@@ -60,8 +60,13 @@
 <body>
     <!-- Logo in the top-left corner -->
     <div class="logo position-absolute m-3">
+        <a href="/">
         <img src="{% static 'logo.png' %}" alt="Logo">
+        </a>
     </div>
+
+    
+
 
     <div class="d-flex justify-content-center align-items-center vh-100">
         <div class="container">
